@@ -4,6 +4,8 @@
  PATCH: [ 1295601 ] Manual: Add linediff coloring
   Manual: Compare_files.xml
   Manual/screenshots new file: filecomp_inlinediff.gif
+ PATCH: [ 1295612 ] Manual: add tip for eols and linefilters
+  Manual: Filters.xml
 
 2005-09-19 Kimmo
  PATCH: [ 1294595 ] Manual: Update options
